Sidebar Update Change: Refactor Sidebar code to be more straightforward. Fix: Make sidebar render on top of header, so that Home icon is visible. Enhance: Make sidebar more aesthetic. (shadow, hover effects)

--- a/app/assets/stylesheets/notifications.css.scss
+++ b/app/assets/stylesheets/notifications.css.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Notifications controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.unread_notification
+{
+	font-weight: bold;
+}
+
+.unread_notification:hover
+{
+	font-weight: bold;
+}
+
+.read_notification
+{
+}
